# lab_final_gtest

./: CMakeLists.txt
include/: head.h
src/: main.cpp  try.cpp
tests/: test_sample.cpp
